fixed the overflow issue, I think

--- a/pixel.css
+++ b/pixel.css
@@ -30,7 +30,8 @@ button{
   margin-left: auto;
   margin-right: auto;
   border-style: solid;
-  border-width: thin;
+  border-width: thick;
+  border-color: orange;
   font-size: 0px;
 }
 
@@ -48,6 +49,7 @@ button{
   border:0px;
   border: 0px;
   background-color: transparent;
+  float:left;
   /*border-style: solid;
   border-width: 1px;*/
 }
